--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@tensorflow/tfjs": "^3.13.0",
-    "@tensorflow/tfjs-converter": "^3.13.0",
+    "@tensorflow/tfjs-tflite": "^0.0.1-alpha.8",
     "core-js": "^3.6.5",
     "vue": "^3.0.0"
   },
